--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,8 +173,14 @@ MRUItem1=/Game/_Level/Spasch_Screen
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
@@ -189,6 +195,7 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
+OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Attack1.KronenFemale_Animations_Attack1
 
 [DetailCategories]
 CamSwitchWithTracker_C.TransformCommon=True
@@ -488,6 +495,131 @@ Actor.HLOD=True
 Actor.Physics=True
 Actor.Networking=True
 Actor.Actor=True
+BP_Bulky_C.TransformCommon=True
+BP_Bulky_C.Animation=True
+BP_Bulky_C.Mesh=True
+BP_Bulky_C.Tick=True
+BP_Bulky_C.Default=True
+BP_Bulky_C.ComponentTick=True
+BP_Bulky_C.Clothing=True
+BP_Bulky_C.Physics=True
+BP_Bulky_C.LeaderPoseComponent=True
+BP_Bulky_C.Collision=True
+BP_Bulky_C.Lighting=True
+BP_Bulky_C.AnimationRig=True
+BP_Bulky_C.Deformer=True
+BP_Bulky_C.SkinWeights=True
+BP_Bulky_C.Rendering=True
+BP_Bulky_C.HLOD=True
+BP_Bulky_C.PathTracing=True
+BP_Bulky_C.Mobile=True
+BP_Bulky_C.Navigation=True
+BP_Bulky_C.RayTracing=True
+BP_Bulky_C.VirtualTexture=True
+BP_Bulky_C.Tags=True
+BP_Bulky_C.AssetUserData=True
+BP_Bulky_C.Replication=True
+BP_Bulky_C.ComponentReplication=True
+BP_Bulky_C.Activation=True
+BP_Bulky_C.Variable=True
+BP_Bulky_C.Cooking=True
+BP_Bulky_C.Character Movement (General Settings)=True
+BP_Bulky_C.Character Movement: Walking=True
+BP_Bulky_C.Character Movement: Jumping / Falling=True
+BP_Bulky_C.Character Movement: Gravity=True
+BP_Bulky_C.Character Movement (Networking)=True
+BP_Bulky_C.Character Movement: Swimming=True
+BP_Bulky_C.Character Movement: Flying=True
+BP_Bulky_C.Character Movement: Custom Movement=True
+BP_Bulky_C.Character Movement (Rotation Settings)=True
+BP_Bulky_C.Character Movement: Physics Interaction=True
+BP_Bulky_C.Character Movement=True
+BP_Bulky_C.Character Movement: Avoidance=True
+BP_Bulky_C.RootMotion=True
+BP_Bulky_C.Character Movement: NavMesh Movement=True
+BP_Bulky_C.NavMovement=True
+BP_Bulky_C.Velocity=True
+BP_Bulky_C.PlanarMovement=True
+BP_Bulky_C.MovementComponent=True
+BP_Bulky_C.Shape=True
+BP_Bulky_C.Character=True
+BP_Bulky_C.Camera=True
+BP_Bulky_C.Pawn=True
+BP_Bulky_C.Actor=True
+BP_Bulky_C.Input=True
+BP_Bulky_C.WorldPartition=True
+BP_Bulky_C.Events=True
+BP_Bulky_C.Materials=True
+AnimSequence.Animation=True
+AnimSequence.Compression=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.Animation Model=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+BP_Kronen_C.TransformCommon=True
+BP_Kronen_C.Animation=True
+BP_Kronen_C.Mesh=True
+BP_Kronen_C.Tick=True
+BP_Kronen_C.Default=True
+BP_Kronen_C.ComponentTick=True
+BP_Kronen_C.Clothing=True
+BP_Kronen_C.Physics=True
+BP_Kronen_C.LeaderPoseComponent=True
+BP_Kronen_C.Collision=True
+BP_Kronen_C.Lighting=True
+BP_Kronen_C.AnimationRig=True
+BP_Kronen_C.Deformer=True
+BP_Kronen_C.SkinWeights=True
+BP_Kronen_C.Rendering=True
+BP_Kronen_C.HLOD=True
+BP_Kronen_C.PathTracing=True
+BP_Kronen_C.Mobile=True
+BP_Kronen_C.Navigation=True
+BP_Kronen_C.RayTracing=True
+BP_Kronen_C.VirtualTexture=True
+BP_Kronen_C.Tags=True
+BP_Kronen_C.AssetUserData=True
+BP_Kronen_C.Replication=True
+BP_Kronen_C.ComponentReplication=True
+BP_Kronen_C.Activation=True
+BP_Kronen_C.Variable=True
+BP_Kronen_C.Cooking=True
+BP_Kronen_C.Character Movement (General Settings)=True
+BP_Kronen_C.Character Movement: Walking=True
+BP_Kronen_C.Character Movement: Jumping / Falling=True
+BP_Kronen_C.Character Movement: Gravity=True
+BP_Kronen_C.Character Movement (Networking)=True
+BP_Kronen_C.Character Movement: Swimming=True
+BP_Kronen_C.Character Movement: Flying=True
+BP_Kronen_C.Character Movement: Custom Movement=True
+BP_Kronen_C.Character Movement (Rotation Settings)=True
+BP_Kronen_C.Character Movement: Physics Interaction=True
+BP_Kronen_C.Character Movement=True
+BP_Kronen_C.Character Movement: Avoidance=True
+BP_Kronen_C.RootMotion=True
+BP_Kronen_C.Character Movement: NavMesh Movement=True
+BP_Kronen_C.NavMovement=True
+BP_Kronen_C.Velocity=True
+BP_Kronen_C.PlanarMovement=True
+BP_Kronen_C.MovementComponent=True
+BP_Kronen_C.Shape=True
+BP_Kronen_C.Character=True
+BP_Kronen_C.Camera=True
+BP_Kronen_C.Pawn=True
+BP_Kronen_C.Actor=True
+BP_Kronen_C.Input=True
+BP_Kronen_C.WorldPartition=True
+BP_Kronen_C.Events=True
+BP_Kronen_C.Materials=True
+EditorNotifyObject.AnimNotify=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
@@ -1598,20 +1730,27 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Ice_Machine1
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Plank_SM
-MRUItem2=/Game/_Level/_Blueprints/wood_BP
-MRUItem3=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Floating_ferry
-MRUItem4=/Game/Ferry_Bobbing
-MRUItem5=/Game/_Level/Spasch_Screen
-MRUItem6=/Game/_Core/_Player/DI_Player
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Stool
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Sink
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Shelf
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter_Corner
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter_2
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture
+MRUItem0=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Attack1
+MRUItem1=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1
+MRUItem2=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Attack_Anim
+MRUItem3=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem4=/Game/_Core/_Enemies/BP_Kronen
+MRUItem5=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem6=/Game/_Core/_Enemies/BP_Bulky
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Outside/Ice_Machine1
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Outside/Plank_SM
+MRUItem9=/Game/_Level/_Blueprints/wood_BP
+MRUItem10=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Floating_ferry
+MRUItem11=/Game/Ferry_Bobbing
+MRUItem12=/Game/_Level/Spasch_Screen
+MRUItem13=/Game/_Core/_Player/DI_Player
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Stool
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Sink
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Shelf
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter_Corner
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter_2
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Counter
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture
 
 [AssetEditorToolkitTabLocation]
 /Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture.Bar_White_Floor_Texture=1
@@ -1627,6 +1766,12 @@ MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture
 /Game/_Level/_LevelAssets/_Props/_Outside/Plank_SM.Plank_SM=1
 /Game/_Level/_LevelAssets/_Props/_Outside/Ice_Machine1.Ice_Machine1=1
 /Game/_Level/_Blueprints/wood_BP.wood_BP=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim.Enemy_Kronen_Bulk_Idle_Anim=1
+/Game/_Core/_Enemies/BP_Kronen.BP_Kronen=1
+/Game/_Core/_Enemies/BP_Bulky.BP_Bulky=1
+/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Attack_Anim.Enemy_Kronen_Bulk_Attack_Anim=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1.KronenFast_Animations_Idle1=1
+/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1.KronenFast_Animations_Attack1=0
 
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.ImportSettings.Mesh
@@ -1645,7 +1790,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1659,11 +1804,42 @@ SequencerAssetPicker.ThumbnailSize=2
 SequencerAssetPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=AnimSyncMarkerList
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=PlatformTargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=HasParentAsset
+SequenceBrowser.HiddenColumns=AnimNotifyList
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 Object=
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1779,6 +1955,7 @@ bAutoExpandNodesOnSelection=True
 TreeViewWidth=0.300000
 
 [PluginBrowser]
+InstalledPlugins=ProjectCleaner
 InstalledPlugins=WMFCodecs
 
 [PlacementMode]
@@ -1789,4 +1966,50 @@ RecentlyPlaced=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Floating_ferr
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=False
 StaticMeshComponent.ComponentTick=False
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
