--- a/BackupDeep/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/BackupDeep/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -193,7 +193,7 @@ Common=False
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -233,7 +233,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Level
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -4420,9 +4420,9 @@ GraphEditorQuickJumps=()
 LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=642.000 Y=0.000
+ScreenPosition=X=1886.000 Y=50.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=True
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -5540,6 +5540,10 @@ ExternalImagePicker.TimeStamp=2024.02.06-21.10.52
 ExternalImagePicker.LastCompileMethod=Unknown
 LauncherServices.TimeStamp=2024.08.07-22.38.45
 LauncherServices.LastCompileMethod=Unknown
+IntroTutorials.TimeStamp=2024.08.07-22.39.50
+IntroTutorials.LastCompileMethod=Unknown
+Pjc.TimeStamp=2024.08.19-10.26.35
+Pjc.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
