Removend sound on the main level

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,7 +198,7 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1
+OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [DetailCategories]
 CamSwitchWithTracker_C.TransformCommon=True
@@ -1733,22 +1733,22 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1
-MRUItem1=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem2=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Attack1
-MRUItem3=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1
-MRUItem4=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Attack_Anim
-MRUItem5=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
-MRUItem6=/Game/_Core/_Enemies/BP_Kronen
-MRUItem7=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
-MRUItem8=/Game/_Core/_Enemies/BP_Bulky
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Outside/Ice_Machine1
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Plank_SM
-MRUItem11=/Game/_Level/_Blueprints/wood_BP
-MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Floating_ferry
-MRUItem13=/Game/Ferry_Bobbing
-MRUItem14=/Game/_Level/Spasch_Screen
-MRUItem15=/Game/_Core/_Player/DI_Player
+MRUItem0=/Game/_Core/_Player/DI_Player
+MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1
+MRUItem2=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem3=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Attack1
+MRUItem4=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1
+MRUItem5=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Attack_Anim
+MRUItem6=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem7=/Game/_Core/_Enemies/BP_Kronen
+MRUItem8=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Idle_Anim
+MRUItem9=/Game/_Core/_Enemies/BP_Bulky
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Ice_Machine1
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Outside/Plank_SM
+MRUItem12=/Game/_Level/_Blueprints/wood_BP
+MRUItem13=/Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Floating_ferry
+MRUItem14=/Game/Ferry_Bobbing
+MRUItem15=/Game/_Level/Spasch_Screen
 MRUItem16=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Stool
 MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Sink
 MRUItem18=/Game/_Level/_LevelAssets/_Props/_Furniture/Bar_Shelf
@@ -1779,6 +1779,7 @@ MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture
 /Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1.KronenFast_Animations_Attack1=0
 /Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Attack1.KronenFemale_Animations_Attack1=0
 /Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1.TheSlugger_Animations_Attack1=1
+/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1=1
 
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.ImportSettings.Mesh
