--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,6 +177,9 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
@@ -202,9 +205,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 
 [DetailCategories]
 CamSwitchWithTracker_C.TransformCommon=True
@@ -2294,36 +2294,36 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Execution1_Anim
-MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Slugger_Execution_Anim
-MRUItem2=/Game/_Level/_LevelAssets/_Environment_Assets/FbxScene_Gate_Backup
-MRUItem3=/Game/_Level/_Blueprints/Fence_BP
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall2
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
-MRUItem8=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/hellooodesign-KDLKrCNPo_s-unsplash
-MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/fish_sign1
-MRUItem10=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim
-MRUItem11=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Walk1
-MRUItem12=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
-MRUItem13=/Game/_Core/_Enemies/BP_Kronen
-MRUItem14=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem15=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
-MRUItem16=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Mat
-MRUItem17=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Texture
-MRUItem18=/Game/_Level/_LevelAssets/_OGFiles/green_wood_BaseColor_2_Mat
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Whitewood_Wall_Mat
-MRUItem20=/Game/_Level/_LevelAssets/_Environment_Assets/bigwindow/big_window
-MRUItem21=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Texture
-MRUItem22=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
-MRUItem23=/Game/_Level/_LevelAssets/_Environment_Assets/roof/White_Wood_Roof_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Whitewood_Wall2_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_Env_Materials/Stucco_M
-MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/building_floor/building_floor
-MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Roof_M_3
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Whitewood_Wall
-MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/new_snowy_roof__BaseColor
+MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnRight_Anim
+MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnLeft_Anim
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn
+MRUItem3=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Execution1_Anim
+MRUItem4=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Slugger_Execution_Anim
+MRUItem5=/Game/_Level/_LevelAssets/_Environment_Assets/FbxScene_Gate_Backup
+MRUItem6=/Game/_Level/_Blueprints/Fence_BP
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall2
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
+MRUItem11=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/hellooodesign-KDLKrCNPo_s-unsplash
+MRUItem12=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/fish_sign1
+MRUItem13=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim
+MRUItem14=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Walk1
+MRUItem15=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
+MRUItem16=/Game/_Core/_Enemies/BP_Kronen
+MRUItem17=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem18=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem19=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Mat
+MRUItem20=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Texture
+MRUItem21=/Game/_Level/_LevelAssets/_OGFiles/green_wood_BaseColor_2_Mat
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Whitewood_Wall_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Environment_Assets/bigwindow/big_window
+MRUItem24=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Texture
+MRUItem25=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
+MRUItem26=/Game/_Level/_LevelAssets/_Environment_Assets/roof/White_Wood_Roof_Mat
+MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Whitewood_Wall2_Texture
+MRUItem28=/Game/_Level/_LevelAssets/_Env_Materials/Stucco_M
+MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/building_floor/building_floor
 
 [AssetEditorToolkitTabLocation]
 /Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture.Bar_White_Floor_Texture=1
@@ -2391,6 +2391,7 @@ MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/new_snowy_roof__Bas
 /Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/hellooodesign-KDLKrCNPo_s-unsplash.hellooodesign-KDLKrCNPo_s-unsplash=1
 /Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1.Gate_Door1=1
 /Game/_Level/_Blueprints/Fence_BP.Fence_BP=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn.Carpenter_Left_Turn=1
 
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
@@ -2445,7 +2446,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Slugger_Enemy
+ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
