--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,6 +177,24 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=LevelSequenceEditor
 RecentAssetEditors=AnimationEditor
@@ -189,26 +207,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Slugger_CS.Slugger_CS
-OpenAssetsAtExit=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1.TheSlugger_Animations_Walk1
 
 [DetailCategories]
 CamSwitchWithTracker_C.TransformCommon=True
@@ -1216,6 +1214,9 @@ MovieSceneMarkedFrame.Marked Frame=True
 MovieSceneAudioSection.Section=True
 MovieSceneAudioSection.Audio=True
 MovieSceneAudioSection.Attenuation=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [RootWindow]
 ScreenPosition=X=316.000 Y=127.000
@@ -2336,36 +2337,36 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Slugger_CS
-MRUItem1=/Game/Moose_CS
-MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
-MRUItem3=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim
-MRUItem4=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnRight_Anim
-MRUItem5=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnLeft_Anim
-MRUItem6=/Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn
-MRUItem7=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Execution1_Anim
-MRUItem8=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Slugger_Execution_Anim
-MRUItem9=/Game/_Level/_LevelAssets/_Environment_Assets/FbxScene_Gate_Backup
-MRUItem10=/Game/_Level/_Blueprints/Fence_BP
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Door1
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall2
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Wall
-MRUItem15=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/hellooodesign-KDLKrCNPo_s-unsplash
-MRUItem16=/Game/_Level/_LevelAssets/_Environment_Assets/fish_sign/fish_sign1
-MRUItem17=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Walk_Anim
-MRUItem18=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Walk1
-MRUItem19=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
-MRUItem20=/Game/_Core/_Enemies/BP_Kronen
-MRUItem21=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem22=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
-MRUItem23=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_OGFiles/Greenwood_Wall_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_OGFiles/green_wood_BaseColor_2_Mat
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Whitewood_Wall_Mat
-MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/bigwindow/big_window
-MRUItem28=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Texture
-MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Car
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Materials/Car4_Mat
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Texture
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Mat
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Texture
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Mat
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Texture
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Mat
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_Mat
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_Mat
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_Mat
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_3_Texture
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_2_Texture
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_1_Texture
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Outside/Newspaper_Dispenser2
+MRUItem18=/Game/Slugger_CS
+MRUItem19=/Game/Moose_CS
+MRUItem20=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim
+MRUItem22=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnRight_Anim
+MRUItem23=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnLeft_Anim
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn
+MRUItem25=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Execution1_Anim
+MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Slugger_Execution_Anim
+MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/FbxScene_Gate_Backup
+MRUItem28=/Game/_Level/_Blueprints/Fence_BP
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
 
 [AssetEditorToolkitTabLocation]
 /Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture.Bar_White_Floor_Texture=1
@@ -2436,6 +2437,10 @@ MRUItem29=/Game/_Level/_LevelAssets/_Environment_Assets/roof/Ceiling_Plaster_Mat
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn.Carpenter_Left_Turn=1
 /Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim.Carpenter_Shotgun_Aim_Anim=1
 /Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1.TheSlugger_Animations_Walk1=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat.Newspaper_Dispenser_2_Mat=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Newspaper_Dispenser2.Newspaper_Dispenser2=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Truck.Truck=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Car4_Mat.Car4_Mat=1
 
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
@@ -2495,7 +2500,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2550,7 +2555,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_Enemies/Slugger_Enemy
+ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -2561,7 +2566,7 @@ ContentBrowserTab1.CurrentViewType=1
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object="\"Object.SkeletalMeshes\" "
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 BP_KronenFast_C=
@@ -2712,6 +2717,8 @@ StaticMeshActor.Materials=True
 StaticMeshActor.StaticMesh=False
 SceneComponent.Rendering=False
 FbxImportUI.Animation=False
+Texture2D.LevelOfDetail=False
+Texture2D.Compression=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
