--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,17 +175,28 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=LevelSequenceEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -194,18 +205,6 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=LevelSequenceEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=LevelSequenceEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
-OpenAssetsAtExit=/Game/Slugger_CS.Slugger_CS
 
 [DetailCategories]
 CamSwitchWithTracker_C.TransformCommon=True
@@ -2345,36 +2344,36 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Slugger_CS
-MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Car
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Car4_Mat
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Texture
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Mat
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Texture
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Mat
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Texture
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_Mat
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_Mat
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_Mat
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_3_Texture
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_2_Texture
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_1_Texture
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Newspaper_Dispenser2
-MRUItem19=/Game/Moose_CS
-MRUItem20=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
-MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Aim_Anim
-MRUItem22=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnRight_Anim
-MRUItem23=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger_TurnLeft_Anim
-MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_Animations/Left/Carpenter_Left_Turn
-MRUItem25=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Execution1_Anim
-MRUItem26=/Game/_Core/_Player/_PlayerAnimations/_Animations/Hurt/Carpenter_Slugger_Execution_Anim
-MRUItem27=/Game/_Level/_LevelAssets/_Environment_Assets/FbxScene_Gate_Backup
-MRUItem28=/Game/_Level/_Blueprints/Fence_BP
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
+MRUItem0=/Game/_Level/_LevelAssets/_Props/_Outside/Truck3
+MRUItem1=/Game/_Level/_LevelAssets/_Props/_Outside/Truck2
+MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Truck
+MRUItem3=/Game/_Level/_LevelAssets/_Props/_Outside/Car3
+MRUItem4=/Game/_Level/_LevelAssets/_Props/_Outside/Car2
+MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_Mat
+MRUItem6=/Game/_Level/_LevelAssets/_Props/_Outside/Car
+MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_2_Mat
+MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_2_Texture
+MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_1_Texture
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_3_Mat
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_2_Texture
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Car2_1_Texture
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_3_Mat
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_2_Mat
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Car4_Mat
+MRUItem16=/Game/Slugger_CS
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Texture
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Truck3_3_Mat
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Texture
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Truck2_3_Mat
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Texture
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Truck1_3_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Car3_Mat
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_Mat
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_3_Texture
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_2_Texture
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Car1_1_Texture
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Newspaper_Dispenser_2_Mat
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Newspaper_Dispenser2
 
 [AssetEditorToolkitTabLocation]
 /Game/_Level/_LevelAssets/_Props/_Materials/Bar_White_Floor_Texture.Bar_White_Floor_Texture=1
@@ -2449,6 +2448,11 @@ MRUItem29=/Game/_Level/_LevelAssets/_Props/_Outside/Gate_Parts/Gate_Pillar
 /Game/_Level/_LevelAssets/_Props/_Outside/Newspaper_Dispenser2.Newspaper_Dispenser2=1
 /Game/_Level/_LevelAssets/_Props/_Outside/Truck.Truck=1
 /Game/_Level/_LevelAssets/_Props/_Materials/Car4_Mat.Car4_Mat=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Car2_2_Mat.Car2_2_Mat=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Car.Car=1
+/Game/_Level/_LevelAssets/_Props/_Materials/Car2_Mat.Car2_Mat=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Truck2.Truck2=1
+/Game/_Level/_LevelAssets/_Props/_Outside/Truck3.Truck3=1
 
 [DetailCustomWidgetExpansion]
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.File Path
@@ -2510,7 +2514,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/_Level/_LevelAssets/_Props/_Outside
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2576,7 +2580,7 @@ ContentBrowserTab1.CurrentViewType=1
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 BP_KronenFast_C=
