Cutscene render export
Added configuration for cutscene rendering

--- a/DeepInfection/Config/DefaultEngine.ini
+++ b/DeepInfection/Config/DefaultEngine.ini
@@ -320,3 +320,9 @@ bCookOnTheFlyForLaunchOn=False
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/MovieRenderPipelineCore.MoviePipelineCommandLineEncoderSettings]
+ExecutablePath=C:\Users\rippo\Desktop\ffmpeg\bin\ffmpeg.exe
+VideoCodec=libx264
+AudioCodec=AAC
+OutputFileExtension=mp4
+
