--- a/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
@@ -81,3 +81,6 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
