--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,6 +166,14 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
@@ -180,7 +188,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -195,7 +202,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_PlaceHolderts/90s_Style_Graphics/Materials/Masters
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Enemies/Slugger_Injured2_Enemy
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -215,7 +222,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Level/_LevelAssets/_CamSwitcher
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_Enemies/Slugger_Injured2_Enemy
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -224,6 +231,33 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=AnimSyncMarkerList
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=PlatformTargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=HasParentAsset
+SequenceBrowser.HiddenColumns=AnimNotifyList
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=156.000
@@ -1366,6 +1400,14 @@ MaterialEditor.TimeStamp=2024.05.17-19.30.24
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2024.05.17-19.30.27
 TextureEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2024.05.17-19.30.20
+AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2024.05.17-19.30.27
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2024.05.17-19.30.26
+PinnedCommandList.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.05.17-19.30.27
+SequencerWidgets.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1382,20 +1424,28 @@ StaticMesh=StaticMesh.StaticMeshMaterials.MaterialList,StaticMesh.LOD0.StaticMes
 MeshNaniteSettings=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
-MRUItem1=/Game/_Level/_LevelAssets/_CamSwitcher/Cam
-MRUItem2=/Game/_Level/_LevelAssets/_Props/_Outside/Container_Handler
-MRUItem3=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_4_Texture
-MRUItem4=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_4_Mat
-MRUItem5=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_3_Texture
-MRUItem6=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_3_Mat
-MRUItem7=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_2_Texture
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_2_Mat
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Open_Trashbin
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Forklift_1_Mat
-MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem13=/Game/NewGameplayBuild/Level/LVL_IslandMain
+MRUItem0=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Skeleton
+MRUItem1=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Attack_Anim
+MRUItem2=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Execution_Anim
+MRUItem3=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Walk_Anim
+MRUItem4=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnRight_Anim
+MRUItem5=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_TurnLeft_Anim
+MRUItem6=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Idle_Anim
+MRUItem7=/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Death_Anim
+MRUItem8=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker
+MRUItem9=/Game/_Level/_LevelAssets/_CamSwitcher/Cam
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Outside/Container_Handler
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_4_Texture
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_4_Mat
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_3_Texture
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_3_Mat
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_2_Texture
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Container_Handler_2_Mat
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Blue_Trashbin
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Outside/Open_Trashbin
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Forklift_1_Mat
+MRUItem20=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem21=/Game/NewGameplayBuild/Level/LVL_IslandMain
 
 [DetailCategories]
 CombineMeshesToolProperties.OutputObject=True
@@ -1940,6 +1990,19 @@ PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+FbxImportUI.Animation=True
+AnimSequence.Animation=True
+AnimSequence.Compression=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.CustomAttributes=True
+AnimSequence.Animation Model=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1959,7 +2022,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=False
+bImportAnimations=True
 bImportMaterials=True
 bImportTextures=True
 
@@ -2070,6 +2133,7 @@ LastLogListing=FBXImport
 /Game/_Level/_LevelAssets/_Props/_Outside/Open_Trashbin.Open_Trashbin=1
 /Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchWithTracker.CamSwitchWithTracker=1
 /Game/_Level/_LevelAssets/_CamSwitcher/Cam.Cam=1
+/Game/_Core/_Enemies/Slugger_Injured2_Enemy/The_Slugger_Injured2_Skeleton.The_Slugger_Injured2_Skeleton=1
 
 [MaterialEditor]
 PrimType=1
@@ -2238,7 +2302,9 @@ bMaterialQualityUsed[3]=0
 [DetailPropertyExpansion]
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" "
-Object=
+Object="\"Object.SkeletalMeshes\" "
+PreviewMeshCollection="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.SkeletalMeshes\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Tavern_Light_BP.Tavern_Light_BP;
@@ -2294,4 +2360,52 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[/Script/UnrealEd.PersonaOptions]
+bAutoAlignFloorToMesh=True
+bAlwaysOpenAnimationAssetsInNewTab=False
+bMuteAudio=False
+bUseAudioAttenuation=True
+DefaultLocalAxesSelection=2
+DefaultBoneDrawSelection=1
+DefaultBoneColor=(R=0.000000,G=0.000000,B=0.025000,A=1.000000)
+SelectedBoneColor=(R=0.200000,G=1.000000,B=0.200000,A=1.000000)
+AffectedBoneColor=(R=1.000000,G=1.000000,B=1.000000,A=1.000000)
+DisabledBoneColor=(R=0.400000,G=0.400000,B=0.400000,A=1.000000)
+ParentOfSelectedBoneColor=(R=0.850000,G=0.450000,B=0.120000,A=1.000000)
+VirtualBoneColor=(R=0.400000,G=0.400000,B=1.000000,A=1.000000)
+SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
+NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
+BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
+bPauseAnimationOnCameraMove=False
+bUseInlineSocketEditor=False
+bFlattenSkeletonHierarchyWhenFiltering=False
+bHideParentsWhenFiltering=False
+bExpandTreeOnSelection=True
+bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
+bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
+bAllowMeshSectionSelection=False
+NumFolderFiltersInAssetBrowser=2
+AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+CurveEditorSnapInterval=0.010000
+TimelineScrubSnapValue=1000
+TimelineDisplayFormat=Frames
+bTimelineDisplayPercentage=True
+bTimelineDisplayFormatSecondary=True
+bTimelineDisplayCurveKeys=False
+TimelineEnabledSnaps=CompositeSegment
+TimelineEnabledSnaps=MontageSection
+bAllowIncompatibleSkeletonSelection=False
+bUseTreeViewForAnimationCurves=False
+AnimationCurveGroupingDelimiters="._/|\\"
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationEditor",Commands=)
+Contexts=(Name="AnimationEditor.Viewport0",Commands=)
+Contexts=(Name="SkeletonEditor",Commands=)
+Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
