--- a/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/Engine.ini
@@ -84,3 +84,11 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
+
